Ticket #1555 (new defect)

Opened 1 month ago

Last modified 1 month ago

AVI and MPG at 1fps don't play correctly

Reported by: tooncis Assigned to:
Priority: normal Milestone: 0.9.0 bugs
Component: Decoders Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: easy Work status: Not started

Description

When you attempt to play a 1fps file, it basically shows the first frame (frozen) for the entire length of the clip. I'm not sure about audio because my system does not capture audio. It is a security camera that takes 1 picture every second (or whatever) and then my system converts the day (or partial day if desired) to a video file as an AVI (xvid) or MPG at 1fps.

If you hit the fast forward button twice (to be at 4x), then the video plays fine...just faster.

I'm using XP and version 0.8.6e and I also tried the latest nightly build (vlc-0.9.0-git-20080403-0909).

Change History

(in reply to: ↑ description ) 04/15/08 15:27:36 changed by tooncis

Here are a couple of sample video files: http://tinyurl.com/6zhro4

They were a little too big to attach I think.

04/17/08 21:32:37 changed by jb

  • platform changed from Win32 to all.
  • version changed from 0.8.6 to HEAD.
  • milestone changed from 0.8.6-bugfix to 0.9.0 bugs.