Windows: run vlc-cache-gen.exe before calling libvlc_new(). Fixes #1555.